# prodScope

./: README.md  pyproject.toml  scope_config.yaml  setup.py
scopeProject/0_constructsample/: 0_clean_cs_crsp.py  1_cik_gvkey_link.py  2_construct_intanStocks.py  3_chunk_10k_text.py
scopeProject/0_constructsample/download_files/: extract_cikgvkey.sas  filter_CCM_links.sas
scopeProject/0_constructsample/embed_items/: 1_embed_items.py  emb_items.slurm
scopeProject/0_get_data/: 2_get_10k_text.py  3_chunk_10k_text.py
scopeProject/0_get_data/download_files/: extract_comp_and_crsp.sas
scopeProject/0_get_data/embed_items/: 1_embed_items.py  1_embedchunk.py  emb_items.slurm  fcns_paths.py
scopeProject/UAE-Large-V1/: README.md  config.json
scopeutils/: __init__.py  config.py  embed.py
scopeutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
